style: fixed on tablet

--- a/components/forms/form.module.css
+++ b/components/forms/form.module.css
@@ -305,9 +305,16 @@
   .form_item#form_item_email,
   .form_item#form_item_type,
   .form_item#form_item_subject,
-  .form_item#form_item_contact_type,
   .from_item#form_item_contact {
     flex: 1;
+  }
+
+  .form_item#form_item_contact_type {
+    flex-basis: 30%;
+  }
+
+  .form_item#form_item_contact {
+    flex-basis: 70%;
   }
 }
 
